syntax = "proto3";

package snp.v1;
option go_package = ".;pb";

import "site_announcement_message.proto";
import "site_ftp_message.proto";
import "site_player_message.proto";
import "google/protobuf/timestamp.proto";

message Site {
  uint32 id = 1;
  uint32 customer_id = 2;
  string title = 4;
  string  code             =5;
  string person = 6;
  string address = 7;
  string phone = 8;
  string email = 9;
  bool muted = 10;
  uint32 size_limit = 11;
  bool  ftp_stats_enabled  =12;
  bool  seek_into_enabled    =13;
  string  notes            =14;
  int32  cross_fade   =15;
  bool  ftp_stats_disabled   =16;
  google.protobuf.Timestamp  expiration   =17;
  int32  disabled =18;
  int64  reconnection_period  =19;
  string  status               =20;
  string  description         =21;
  int64  volume               =22;
  string  playlist_type         =23;
  SiteFTP  site_ftp =24;
  SitePlayer site_player =25;
  SiteAnnouncement site_announcement =26;
  google.protobuf.Timestamp  open_mon    =27;
  google.protobuf.Timestamp  close_mon   =28;
  google.protobuf.Timestamp  open_tue    =29;
  google.protobuf.Timestamp  close_tue   =30;
  google.protobuf.Timestamp  open_wed    =31;
  google.protobuf.Timestamp  close_wed   =32;
  google.protobuf.Timestamp  open_thu    =33;
  google.protobuf.Timestamp  close_thu   =34;
  google.protobuf.Timestamp  open_fri    =35;
  google.protobuf.Timestamp  close_fri   =36;
  google.protobuf.Timestamp  open_sat    =37;
  google.protobuf.Timestamp  close_sat   =38;
  google.protobuf.Timestamp  open_sun    =39;
  google.protobuf.Timestamp  close_sun   =40;
}